WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
198732
Web Inspector: DNS names in SymmaryInfo was wrong.
https://bugs.webkit.org/show_bug.cgi?id=198732
Summary
Web Inspector: DNS names in SymmaryInfo was wrong.
Basuke Suzuki
Reported
2019-06-10 14:54:03 PDT
dnsNames are set.
Attachments
PATCH
(1.44 KB, patch)
2019-06-10 15:00 PDT
,
Basuke Suzuki
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Basuke Suzuki
Comment 1
2019-06-10 15:00:53 PDT
Created
attachment 371782
[details]
PATCH Trivial fix.
Devin Rousso
Comment 2
2019-06-10 15:05:24 PDT
Comment on
attachment 371782
[details]
PATCH r=me, oops :|
WebKit Commit Bot
Comment 3
2019-06-10 15:47:52 PDT
Comment on
attachment 371782
[details]
PATCH Clearing flags on attachment: 371782 Committed
r246288
: <
https://trac.webkit.org/changeset/246288
>
WebKit Commit Bot
Comment 4
2019-06-10 15:47:53 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2019-06-10 15:48:21 PDT
<
rdar://problem/51601162
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug