Web Inspector: DNS names in SymmaryInfo was wrong. https://bugs.webkit.org/show_bug.cgi?id=198732

Reviewed by Devin Rousso.

* inspector/agents/InspectorNetworkAgent.cpp:
(WebCore::InspectorNetworkAgent::buildObjectForResourceResponse):


Canonical link: https://commits.webkit.org/212714@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@246288 268f45cc-cd09-0410-ab3c-d52691b4dbfc